helm/home-k8s/kustomize/argocd/overlays/production/argo-dex-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-dex-server
  namespace: argocd
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-dex-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-dex-server
  template:
    spec:
      containers:
        - name: dex
