helm/home-k8s/kustomize/argocd/overlays/production/argocd-lovely-plugin.yaml
# Downloads the plugin and moves it to /custom-tools, which is then mounted on the argocd-repo-server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-lovely-plugin
  namespace: argocd
spec:
  template:
    spec:
      containers:
      - name: argocd-repo-server
        volumeMounts:
        - name: custom-tools
          mountPath: /usr/local/bin/argocd-lovely-plugin
          subPath: argocd-lovely-plugin
        # Environment Variables are optional
      volumes:
      - name: custom-tools
        emptyDir: {}
